# rag_eval

./: .pre-commit-config.yaml  README.md  pyproject.toml  scan_report_gpt.html
data/: questions.csv  us_sou_2023.txt
model/: classification_model.py  rag_model.py
rag_eval/: __main__.py  run_eval.py
