[tool.poetry]
name = "rag-eval"
version = "0.1.0"
description = ""
authors = ["rozepatricia <patricia.roze@hec.edu>"]
readme = "README.md"
packages = [{include = "rag_eval"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
giskard = {extras = ["llm"], version = "^2.5.0"}
langchain-openai = "^0.0.2.post1"
chromadb = "^0.4.22"
python-dotenv = "^1.0.0"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
